[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "adversarial-sampler-for-rl"   # distribution name: can have hyphens
version = "0.1.0"
description = ""
authors = ["You <you@example.com>"]
packages = [{ include = "learning" }] 

# Tell setuptools: read deps from a file instead of hard-coding here
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
