[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-sampler-for-rl"
version = "0.1.0"
description = "Adversarial Sampler for RL"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
# List your actual dependencies here so they auto-install for other users
dependencies = [
    "numpy",
    "jax",
    "flax",
    "brax",
    "optax",
    "wandb",
    "matplotlib",
    "imageio",
    "absl-py",
    "scipy",
]

# This section automatically finds your 'learning' folder and makes it a package
[tool.setuptools.packages.find]
where = ["."]  # Look in the current directory
include = ["learning*", "custom_envs"]  # Include the 'learning' directory and anything inside it